--- a/Project/PeerInfo.cfg
+++ b/Project/PeerInfo.cfg
@@ -1,4 +1,4 @@
-1001 lin114-00.cise.ufl.edu 1313 0
-1002 lin114-01.cise.ufl.edu 1313 0
-1003 lin114-02.cise.ufl.edu 1313 0
-1004 lin114-03.cise.ufl.edu 1313 1
+1001 localhost 1313 1
+1002 localhost 1314 0
+1003 localhost 1315 1
+1004 localhost 1316 0
