--- a/Project/Common.cfg
+++ b/Project/Common.cfg
@@ -1,6 +1,6 @@
 NumberOfPreferredNeighbors 3
-UnchokingInterval 5
-OptimisticUnchokingInterval 8
-FileName file.txt
-FileSize 188
-PieceSize 20
+UnchokingInterval 2
+OptimisticUnchokingInterval 4
+FileName I_Have_A_Dream.txt
+FileSize 7014
+PieceSize 100
